# pathlib

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: tests.yml
src/: comp.rs  lib.rs  nt.rs  path.rs  posix.rs  pure.rs  unified.rs
tests/: compatibility.rs
