[package]
name = "pathlib"
version = "0.0.0"
description = "A simple path library"
license = "MIT"
keywords = ["path", "pathlib"]
categories = ["filesystem"]
readme = "README.md"
repository = "https://github.com/TheVeryDarkness/pathlib"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
cfg-if = "1.0.0"

[features]
default = ["std"]
std = []

[target.'cfg(target_os = "emscripten")'.dependencies.emscripten-functions]
version = "0.2.3"

[target.'cfg(target_os = "emscripten")'.dependencies.emscripten-val]
version = "0.1.7"
